[gd_scene load_steps=5 format=3 uid="uid://63su7sc8vev6"]

[ext_resource type="Script" path="res://Comfy_Godot_WebSocket.gd" id="1_o8ryd"]
[ext_resource type="Texture2D" uid="uid://mqrm3t7qkvku" path="res://Godot_Comfy_AI_logo.svg" id="2_ydw5w"]
[ext_resource type="Theme" uid="uid://bnx831oxnajt7" path="res://Comfy_theme.tres" id="3_wksjx"]
[ext_resource type="Texture2D" uid="uid://5sa42c3sxcnk" path="res://godot-comfy-ai-text-logo.png" id="4_wu7no"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8ryd")

[node name="Background_ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ConnectionTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="DataParsingTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ImageDisplay_TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -455.111
offset_top = 10.0
offset_right = 504.889
offset_bottom = 550.0
grow_horizontal = 2
texture = ExtResource("2_ydw5w")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -337.0
offset_top = -60.0
offset_right = 337.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_wksjx")

[node name="Console_Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wksjx")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_wksjx")
alignment = 1

[node name="Godot-comfy-ai-text-logo" type="Sprite2D" parent="VBoxContainer/MarginContainer/HBoxContainer"]
position = Vector2(-178, 42)
scale = Vector2(0.0696722, 0.0696722)
texture = ExtResource("4_wu7no")

[node name="Buttons_VBoxContainer_1" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wksjx")

[node name="Connect_to_Comfy_Server" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/Buttons_VBoxContainer_1"]
layout_mode = 2
theme = ExtResource("3_wksjx")
text = "Connect To ComfyUI Server"

[node name="Make_Image" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/Buttons_VBoxContainer_1"]
layout_mode = 2
theme = ExtResource("3_wksjx")
text = "Make Image"

[node name="Input_VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PositivePrompt_Input" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer/Input_VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wksjx")
placeholder_text = "Enter Positive Prompt Here"
alignment = 1
expand_to_text_length = true
caret_blink = true

[node name="NegativePrompt_Input" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer/Input_VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wksjx")
placeholder_text = "Enter Negative Prompt Here"
alignment = 1
expand_to_text_length = true
caret_blink = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wksjx")
text = "Random Seed"

[node name="RandomSeedToggleButton" type="CheckButton" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Buttons_VBoxContainer_2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wksjx")

[node name="Seed_SpinBox" type="SpinBox" parent="VBoxContainer/MarginContainer/HBoxContainer/Buttons_VBoxContainer_2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Enter seed value or choose random"
theme = ExtResource("3_wksjx")
min_value = 1.0
max_value = 1e+10
value = 1.0
update_on_text_changed = true
prefix = "Seed:"

[node name="WebSocket_State_Check" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/Buttons_VBoxContainer_2"]
layout_mode = 2
theme = ExtResource("3_wksjx")
text = "Check Websocket State"

[connection signal="timeout" from="ConnectionTimer" to="." method="_on_connection_timeout"]
[connection signal="button_down" from="VBoxContainer/MarginContainer/HBoxContainer/Buttons_VBoxContainer_1/Connect_to_Comfy_Server" to="." method="_on_connect_comfy_server_button_down"]
[connection signal="button_down" from="VBoxContainer/MarginContainer/HBoxContainer/Buttons_VBoxContainer_1/Make_Image" to="." method="_on_make_image_button_down"]
[connection signal="button_down" from="VBoxContainer/MarginContainer/HBoxContainer/Buttons_VBoxContainer_2/WebSocket_State_Check" to="." method="_on_socket_state_check_button_down"]
